# jumpwire

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  docker-compose.yaml  docker-compose.yml  jumpwire.yaml  mix.exs
.github/workflows/: cleanup.yaml  linter.yaml  shipit.yaml
.hooks/: tag
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: group-access-policy-guide.md  rds-gateway-guide.md  sso-guide.md
lib/: jumpwire.ex  mapset_encoder.ex  retry.ex  tuple_encoder.ex
lib/ecto/: any.ex  atom.ex  map_set.ex  tuple.ex
lib/jumpwire/: acme.ex  analytics.ex  application.ex  base64.ex  client_auth.ex  config.ex  config_loader.ex  credentials.ex  ets.ex  events.ex  global_config.ex  group.ex  health_check.ex  helpers.ex  local_config.ex  manifest.ex  metadata.ex  metastore.ex  phony.ex  policy.ex  proxy.ex  pubsub.ex  record.ex  router.ex  schema.ex  sso.ex  sso_behaviour.ex  sso_samly_impl.ex  startup_indicator.ex  telemetry.ex  tls.ex  token.ex  trace.ex  ui_log.ex  vault.ex  websocket.ex
lib/samly/: assertion_encoder.ex
native/jumpwire_base64/: Cargo.toml  (+1 more)
native/jumpwire_proxy_sql_parser/: Cargo.toml  README.md
native/jumpwire_proxy_sql_parser/src/: filter.rs  lib.rs  matcher.rs
native/jumpwire_proxy_sql_parser/src/filter/: table.rs
native/jumpwire_proxy_sql_parser/src/matcher/: table.rs
rel/: env.sh.eex  remote.vm.args.eex  vm.args.eex
release/: Dockerfile  entrypoint.sh  extract-release.sh
test/: test_helper.exs
(+122 files in other folders)
